scrutiny/app/scrutiny-collector.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: scrutiny-collector
spec:
  selector:
    matchLabels:
      app: scrutiny-collector
  template:
    metadata:
      labels:
        app: scrutiny-collector
    spec:
      hostPID: true
      containers:
        - name: scrutiny-collector
          image: ghcr.io/analogj/scrutiny:master-collector
          securityContext:
            privileged: true
            capabilities:
              add: ["SYS_RAWIO"]
          volumeMounts:
            - name: run-udev
              mountPath: /run/udev
              readOnly: true
            - name: dev
              mountPath: /dev
              readOnly: true
      volumes:
        - name: run-udev
          hostPath:
            path: /run/udev
        - name: dev
          hostPath:
            path: /dev
