scrutiny/app/scrutiny-web.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scrutiny-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scrutiny-web
  template:
    metadata:
      labels:
        app: scrutiny-web
    spec:
      containers:
        - name: scrutiny-web
          image: ghcr.io/analogj/scrutiny:master-web
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: scrutiny-web
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: scrutiny-web
