scrutiny/app/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scrutiny-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: traefik-ip-whitelist@kubernetescrd
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    argocd.argoproj.io/ignore-healthcheck: "true"
spec:
  rules:
    - host: scrutiny.local.traunseenet.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: scrutiny-web
                port:
                  number: 8080
  tls:
    - hosts:
        - scrutiny.local.traunseenet.com
      secretName: letsencrypt-prod
